--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<h1>little boy game</h1>
-<iframe
-  src="https://www.douyin.com/user/MS4wLjABAAAA2XPMZfN6rg-jIC4Y_Vp4bTWL-of3L177qS1rMS93H3rAQtoudAZlFkGRpX8Fd1kT?from_tab_name=main&vid=7556912634256198954" <!-- 嵌入的外部URL -->
-  width="800"
-  height="500"
-  frameborder="0" <!-- 移除边框 -->
-  sandbox="allow-scripts allow-same-origin" <!-- 安全限制：允许脚本、同域访问 -->
-  scrolling="no" <!-- 滚动条：auto/yes/no -->
-  title="抖音" <!-- 无障碍说明 -->
->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>little boy game</title>
+  </head>
+  <body>
+    <div>
+    <h1>little boy game</h1>
+    <h2>我的世界玩家</h2>
+    <h3>分主页：</h3>
+    <a href="about.html"></a>
+    </div>
+  </body>
+</html>
 
