--- a/index.html
+++ b/index.html
@@ -3,14 +3,52 @@
   <head>
     <meta charset="UTF-8">
     <title>little boy game</title>
+    <style>
+  .top-nav {
+      background-color: #007bff; 
+      display: flex;
+      justify-content: space-between; 
+      align-items: center;
+      padding: 0 20px; 
+      height: 60px; 
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+    }
+    .red {
+      color: red;
+    }
+    .blue {
+      color: blue;
+    }
+    .green {
+      color: green;
+    }
+    .orange {
+      color: orange;
+    }
+    .pink {
+      color: pink;
+    }
+    .purple {
+      color: purple;
+    }
+    .break {
+      color: #28d25b;
+    }
+      </style>
   </head>
   <body>
-    <div>
-    <h1>little boy game</h1>
-    <h2>我的世界玩家</h2>
-    <h3>分主页：</h3>
-    <a href="about.html"></a>
+    <div class:"top-nav">
+      <div class:"logo">
+        <span>little boy game</span>
+        <span>我的世界</span>
+      </div>
     </div>
+    <h1 class:"green">little boy game</h1>
+    <h3>分页：</h3>
+    <a href=".html"></a>
   </body>
 </html>
 
