--- a/index.html
+++ b/index.html
@@ -4,51 +4,75 @@
     <meta charset="UTF-8">
     <title>little boy game</title>
     <style>
-  .top-nav {
-      background-color: #007bff; 
-      display: flex;
-      justify-content: space-between; 
-      align-items: center;
-      padding: 0 20px; 
-      height: 60px; 
-    }
-    .logo {
-      display: flex;
-      align-items: center;
-    }
-    .red {
-      color: red;
-    }
-    .blue {
-      color: blue;
-    }
-    .green {
-      color: green;
-    }
-    .orange {
-      color: orange;
-    }
-    .pink {
-      color: pink;
-    }
-    .purple {
-      color: purple;
-    }
-    .break {
-      color: #28d25b;
-    }
-      </style>
+      .top-nav {
+        background-color: #007bff; 
+        display: flex;
+        justify-content: space-between; 
+        align-items: center;
+        padding: 0 20px; 
+        height: 60px; 
+      }
+
+      .logo {
+        display: flex;
+        align-items: center;
+      }
+
+      .logo img {
+        height: 36px; 
+        width: auto;
+      }
+
+      .logo span {
+        color: #fff;
+        font-size: 20px;
+        margin-left: 8px;
+        font-weight: bold;
+      }
+
+      .nav-links {
+        display: flex;
+        gap: 30px; 
+      }
+
+      .nav-links a {
+        color: #fff;
+        text-decoration: none; 
+        font-size: 16px;
+      }
+      .red {
+        color: red;
+      }
+      .blue {
+        color: blue;
+      }
+      .green {
+        color: green;
+      }
+      .orange {
+        color: orange;
+      }
+      .pink {
+        color: pink;
+      }
+      .purple {
+        color: purple;
+      }
+      .break {
+        color: #28d25b;
+      }
+    </style>
   </head>
   <body>
-    <div class:"top-nav">
-      <div class:"logo">
+    <div class="top-nav">
+      <div class="logo">
         <span>little boy game</span>
         <span>我的世界</span>
       </div>
     </div>
-    <h1 class:"green">little boy game</h1>
+    <h1 class="green">little boy game</h1>
     <h3>分页：</h3>
-    <a href=".html"></a>
+    <a href="little boy server.html" class="blue">little boy 服务器组</a>
   </body>
 </html>
 
