--- a/LittleBoyServer.html
+++ b/LittleBoyServer.html
@@ -385,10 +385,26 @@
 
                     <div class="feature-card glass-card">
                         <div class="feature-icon-wrapper">
+                            <i class="fas fa-user-shield feature-icon"></i>
+                        </div>
+                        <h3 class="feature-title">举报与帮助</h3>
+                        <p>遇到不文明行为或作弊玩家，可在QQ群里@群主举报，腐竹&管理员会及时处理。</p>
+                    </div>
+
+                    <div class="feature-card glass-card">
+                        <div class="feature-icon-wrapper">
                             <i class="fas fa-brands fa-qq feature-icon"></i>
                         </div>
                         <h3 class="feature-title">QQ主要交流平台</h3>
                         <p>服务器讨论主要靠QQ群等进行玩家&腐竹间的谈论</p>
+                    </div>
+
+                    <div class="feature-card glass-card">
+                        <div class="feature-icon-wrapper">
+                            <i class="fas fa-calendar-alt feature-icon"></i>
+                        </div>
+                        <h3 class="feature-title">活动安排</h3>
+                        <p>服务器每周举办多种活动，包括建筑比赛、PVP竞技、找宝藏等，参与可获得丰厚奖励。关注公告和QQ群通知，不要错过任何精彩活动！</p>
                     </div>
                 </div>
             </div>
@@ -703,6 +719,7 @@
                         <a href="#features">规则</a>
                         <a href="#server-group">多服状态</a>
                         <a href="https://qm.qq.com/q/liszCGmeNW" target="_blank">官方QQ群</a>
+                        <a href="https://afdian.com/a/little-boy-game" target="_blank">支持我们</a>
                     </div>
                 </div>
 
