--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <h1 class="green">little boy game</h1>
     <h3>分页：</h3>
-    <a href="little boy server.html" class="blue">little boy 服务器组</a>
+    <a href="LittleBoyServer.html" class="blue">little boy 服务器组</a>
   </body>
 </html>
 
