--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 
             /* ---------- 全局重置与滚动修复 ---------- */
             * { margin:0; padding:0; box-sizing:border-box; font-family: Arial, Helvetica, sans-serif; }
-            /* 始终保留纵向滚动条，禁止横向溢出（防止页面左右抖动与横向滚动条） */
             html { overflow-y: scroll; overflow-x: hidden; }
-            body.preload { overflow: hidden; } /* 入口动画播放时禁止滚动 */
-            /* 隐藏页面除 entry overlay 之外的所有内容，避免先闪烁页面再开始动画 */
+            body.preload { overflow: hidden; }
             body.preload > :not(#entrySwipe) { visibility: hidden !important; pointer-events: none !important; }
             body { overflow-x: hidden; -webkit-overflow-scrolling: touch; background:#071428; color:#fff; line-height:1.5; }
 
@@ -88,7 +86,7 @@
             .server-status.online { background: linear-gradient(90deg,#1ec27f20,#1ec27f30); color:#bfffe3; border:1px solid rgba(46,204,113,0.12); }
             .server-status.offline { background: linear-gradient(90deg,#e74c3c20,#e74c3c30); color:#ffd2d2; border:1px solid rgba(231,76,60,0.12); }
 
-            /* ---------- 入口动画：中间切开（修复过溢出与滚动条问题） ---------- */
+            /* ---------- 入口动画：中间切开（修复平行四边形切入抖动/位置计算 bug） ---------- */
             .entry-swipe {
                 position: fixed;
                 inset: 0;
@@ -98,62 +96,66 @@
                 justify-content: center;
                 pointer-events: none;      /* 默认不拦截事件 */
                 overflow: hidden;
+                contain: strict;           /* 限制渲染区域，减小重绘范围 */
             }
-            .entry-swipe.show { pointer-events: auto; } /* 显示时拦截事件，避免用户操作页面 */
+             .entry-swipe.show { pointer-events: auto; } /* 显示时拦截事件，避免用户操作页面 */
 
-            /* 两块覆盖面板：左右外移（使用 translate 不改布局） */
+            /* 两块覆盖面板：改为基于元素中心定位并用 translate3d 控制位置，避免使用超大 vw 导致不同浏览器计算误差 */
             .entry-swipe .panel {
                 position: absolute;
-                width: 70vw;                /* 用视口宽度，避免超出导致滚动条 */
-                max-width: 900px;
-                height: 160vh;
-                top: -30vh;
+                left: 50%;
+                top: 50%;
+                width: 120vw;               /* 覆盖更大区域但用 translate 控制可视位置 */
+                max-width: 1400px;
+                height: 120vh;
+                transform-origin: center;
                 background: linear-gradient(135deg, #071428 0%, #0d6efd 70%);
                 border-radius: 20px;
                 box-shadow: 0 30px 80px rgba(2,6,23,0.6);
-                transform-origin: center;
-                transition: transform var(--swipe-duration) var(--ease), opacity 420ms ease;
+                transition: transform var(--swipe-duration) var(--ease), opacity 320ms ease;
                 will-change: transform, opacity;
-                left: 50%;
+                /* 把元素中心对齐到视口中心，具体位置通过 translate 控制 */
+                transform: translate3d(-50%, -50%, 0) rotate(-12deg);
             }
-            /* 使用 translate3d 和 CSS 变量以便 GPU 加速与统一时长 */
-            .entry-swipe .panel.left { transform: translate3d(-260vw,0,0) rotate(-12deg); }   /* 初始值在视口外 */
-            .entry-swipe .panel.right { transform: translate3d(260vw,0,0) rotate(-12deg); }  /* 初始值在视口外 */
-            .entry-swipe.show .panel.left  { transform: translate3d(-50vw,0,0) rotate(-12deg); } /* 滑到中间覆盖 */
-            .entry-swipe.show .panel.right { transform: translate3d(50vw,0,0) rotate(-12deg); }
+            /* 初始状态：左右面板分别位于两侧视口之外（相对自己的宽度） */
+            .entry-swipe .panel.left  { transform: translate3d(-170%, -50%, 0) rotate(-12deg); }
+            .entry-swipe .panel.right { transform: translate3d(70%, -50%, 0) rotate(-12deg); }
+            /* 激活状态：两块滑入覆盖中心，形成斜角覆盖（平行四边形） */
+            .entry-swipe.show .panel.left  { transform: translate3d(-10%, -50%, 0) rotate(-12deg); }
+            .entry-swipe.show .panel.right { transform: translate3d(10%, -50%, 0) rotate(-12deg); }
 
-            /* 中央 logo（圆角） */
-            .entry-swipe .center-logo {
-                position: relative;
-                z-index: 1000000;
-                width: 140px; height: 140px;
-                border-radius: 18px;
-                overflow: hidden;
-                display: flex; align-items: center; justify-content: center;
-                background: rgba(255,255,255,0.04);
-                box-shadow: 0 10px 30px rgba(2,6,23,0.6);
-                opacity: 0; transform: scale(.92);
-                transition: opacity var(--logo-show) var(--ease), transform var(--logo-show) var(--ease);
-            }
-            .entry-swipe.show .center-logo { opacity:1; transform: scale(1); }
-            .entry-swipe .center-logo img {
-                width: 100%;
-                height: 100%;
-                object-fit: contain;        /* 保证图片完整可见（不被裁切） */
-                display:block;
-                padding: 6px;               /* 给圆角留白，避免边缘被圆角裁剪 */
-                background: transparent;
-            }
+            /* 切开/退出：两侧快速飞出（数值足够大以避免触发横向滚动） */
+            .entry-swipe.cut .panel.left  { transform: translate3d(-260%, -50%, 0) rotate(-12deg); opacity: 0; transition: transform var(--logo-cut) var(--ease), opacity .28s; }
+            .entry-swipe.cut .panel.right { transform: translate3d(200%, -50%, 0) rotate(-12deg);  opacity: 0; transition: transform var(--logo-cut) var(--ease), opacity .28s; }
 
-            /* 切开：左右面板向两侧快速移出（把值设大，避免触发横滚） */
-            .entry-swipe.cut .panel.left  { transform: translate3d(-260vw,0,0) rotate(-12deg); opacity: 0; transition: transform var(--logo-cut) var(--ease), opacity .32s; }
-            .entry-swipe.cut .panel.right { transform: translate3d(260vw,0,0) rotate(-12deg);  opacity: 0; transition: transform var(--logo-cut) var(--ease), opacity .32s; }
+             /* 中央 logo（圆角） */
+             .entry-swipe .center-logo {
+                 position: relative;
+                 z-index: 1000000;
+                 width: 140px; height: 140px;
+                 border-radius: 18px;
+                 overflow: hidden;
+                 display: flex; align-items: center; justify-content: center;
+                 background: rgba(255,255,255,0.04);
+                 box-shadow: 0 10px 30px rgba(2,6,23,0.6);
+                 opacity: 0; transform: scale(.92);
+                 transition: opacity var(--logo-show) var(--ease), transform var(--logo-show) var(--ease);
+             }
+             .entry-swipe.show .center-logo { opacity:1; transform: scale(1); }
+             .entry-swipe .center-logo img {
+                 width: 100%;
+                 height: 100%;
+                 object-fit: contain;
+                 display:block;
+                 padding: 6px;
+                 background: transparent;
+             }
 
             /* 响应 */
-            @media (max-width:640px) {
-                .entry-swipe .center-logo { width:110px; height:110px; border-radius:12px; }
-                .entry-swipe .panel { width:120vw; left: 50%; }
-            }
+             @media (max-width:640px) {
+                 .entry-swipe .center-logo { width:110px; height:110px; border-radius:12px; }
+                .entry-swipe .panel { width:140vw; left:50%; top:50%; }
+             }
         </style>
     </head>
 
@@ -175,11 +177,18 @@
         <div class="container">
             <h1 class="green">little boy game</h1>
             <div class="section-subtitle">
-              <h3>分页：</h3>
+              <h3>游戏：</h3>
                 <div class="th">
 
                   <a href="LittleBoyServer.html" class="qblue th2" data-transition="swipe" >little boy 服务器组  <i class="fa-solid fa-gamepad"></i></a>
                   <a href="md.html" class="qblue th2" data-transition="swipe" >鸣谢名单  <i class="fa-solid fa-leaf"></i></a>
+                </div>
+            </div>
+            <div class="section-subtitle">
+              <h3>校内：</h3>
+                <div class="th">
+                    <a href="bj.html" class="qblue th2" data-transition="swipe" >北金人民政府  <i class="fa-solid fa-landmark"></i></a>
+                    <a href="b_xw.html" class="qblue th2" data-transition="swipe" >班内新闻  <i class="fa-regular fa-newspaper"></i></a>
                 </div>
             </div>
         </div>
@@ -198,19 +207,14 @@
             (function () {
                 const entry = document.getElementById('entrySwipe');
                 if (!entry) {
-                    // 若 overlay DOM 不在，立即显示页面
                     document.body.classList.remove('preload');
                     return;
                 }
-
-                // 与 CSS 变量保持一致（单位：ms）
+ 
                 const SHOW_MS = 420;
                 const HOLD_MS = 500;
                 const CUT_MS = 420;
-
-                // 播放入口动画的逻辑：
-                // - 如果来自带转场的页面（playEntryOnNextLoad === '1'），则一定播放一次并清除标志。
-                // - 否则仅在本会话未播放过时播放（session 内首次访问）。
+ 
                 function shouldPlayEntry() {
                     try {
                         if (sessionStorage.getItem('playEntryOnNextLoad') === '1') return true;
@@ -218,50 +222,47 @@
                     } catch (e) {}
                     return false;
                 }
-
+ 
                 function markPlayed() {
                     try { sessionStorage.setItem('entryPlayed', '1'); sessionStorage.removeItem('playEntryOnNextLoad'); } catch(e){}
                 }
-
-                // 隐藏 overlay 并显示页面内容
+ 
                 function finishEntry() {
                     entry.style.display = 'none';
                     entry.classList.remove('show','cut');
                     entry.setAttribute('aria-hidden','true');
-                    document.body.classList.remove('preload'); // 显示页面内容
+                    document.body.classList.remove('preload');
                     markPlayed();
                 }
-
+ 
                 function playEntry() {
-                    // 确保 overlay 可见并阻止页面交互
                     entry.style.display = 'flex';
-                    // render frame
+                    // render frame：强制子 panel 重绘再添加 class，避免某些浏览器在 transform 计算上出现跳动
                     requestAnimationFrame(() => {
+                        // 强制重排（读取布局属性）
+                        const p = entry.querySelector('.panel');
+                        if (p) void p.offsetHeight;
                         entry.classList.add('show'); // panels 滑入并 logo 渐显
                         entry.setAttribute('aria-hidden','false');
                     });
-
+ 
                     // 等待 logo 显示后进行切开
                     setTimeout(() => {
                         entry.classList.add('cut'); // 面板向两侧移出
                     }, SHOW_MS + HOLD_MS);
-
+ 
                     // 切开结束后隐藏 overlay 并显示页面
                     setTimeout(() => {
                         finishEntry();
                     }, SHOW_MS + HOLD_MS + CUT_MS + 60);
                 }
-
-                // pageshow 可兼容 bfcache（后退）
+ 
                 window.addEventListener('pageshow', (e) => {
                     if (!shouldPlayEntry()) {
-                        // 不播放动画：直接显示页面
                         document.body.classList.remove('preload');
                         entry.style.display = 'none';
                         return;
                     }
-                    // 确保 overlay 在首帧展示，避免先闪烁页面再开始动画
-                    // 使用 requestAnimationFrame + small timeout 让浏览器先绘制 overlay
                     requestAnimationFrame(() => setTimeout(playEntry, 60));
                 }, { once: true });
             })();
