--- a/bj.html
+++ b/bj.html
@@ -503,26 +503,114 @@
                             </div>
                         </div>
                         <h3 class="member-name">李鑫铜</h3>
-                        <div class="member-role">国防部长</div>
+                        <div class="member-role">陆军部长&副总统助理</div>
                         <p class="member-desc">负责维护北金人民政府秩序，处理国家纠纷。</p>
                     </div>
 
                     <div class="team-member glass-card floating">
                         <div class="member-avatar">
                             <div class="minecraft-avatar">
-                                <i class="fas fa-hammer"></i>
+                                <i class="fas fa-shield-alt"></i>
+                            </div>
+                        </div>
+                        <h3 class="member-name">褚家瑞</h3>
+                        <div class="member-role">陆军副部长</div>
+                        <p class="member-desc">负责维护北金人民政府秩序，处理国家纠纷。</p>
+                    </div>
+
+                    <div class="team-member glass-card floating">
+                        <div class="member-avatar">
+                            <div class="minecraft-avatar">
+                                <i class="fas fa-ship"></i>
+                            </div>
+                        </div>
+                        <h3 class="member-name">马乐熙</h3>
+                        <div class="member-role">海军部长</div>
+                        <p class="member-desc">解决饮水机、厕所等地区领土保护及纠纷解决</p>
+                    </div>
+
+                    <div class="team-member glass-card floating">
+                        <div class="member-avatar">
+                            <div class="minecraft-avatar">
+                                <i class="fas fa-ship"></i>
+                            </div>
+                        </div>
+                        <h3 class="member-name">庞子瑞</h3>
+                        <div class="member-role">海军副部长</div>
+                        <p class="member-desc">帮助海军部长解决饮水机、厕所等地区领土保护及纠纷解决</p>
+                    </div>
+
+                    
+
+                    <div class="team-member glass-card floating">
+                        <div class="member-avatar">
+                            <div class="minecraft-avatar">
+                                <i class="fas fa-person-dress"></i>
+                            </div>
+                        </div>
+                        <h3 class="member-name">朱佳睿</h3>
+                        <div class="member-role">女生方面军部长</div>
+                        <p class="member-desc">带领女生，负责维护北金人民政府秩序，处理国家纠纷。</p>
+                    </div>
+
+                    <div class="team-member glass-card floating">
+                        <div class="member-avatar">
+                            <div class="minecraft-avatar">
+                                <i class="fas fa-earth-europe"></i>
+                            </div>
+                        </div>
+                        <h3 class="member-name">李星艾</h3>
+                        <div class="member-role">二西省省长（待换）</div>
+                        <p class="member-desc">负责维护二西省秩序，更好的传达消息</p>
+                    </div>
+
+                    <div class="team-member glass-card floating">
+                        <div class="member-avatar">
+                            <div class="minecraft-avatar">
+                                <i class="fas fa-earth-europe"></i>
+                            </div>
+                        </div>
+                        <h3 class="member-name">刘浩然</h3>
+                        <div class="member-role">二东省省长</div>
+                        <p class="member-desc">负责维护二东省秩序，更好的传达消息</p>
+                    </div>
+
+                    <div class="team-member glass-card floating">
+                        <div class="member-avatar">
+                            <div class="minecraft-avatar">
+                                <i class="fas fa-person-through-window"></i>
+                            </div>
+                        </div>
+                        <h3 class="member-name">李钧浩</h3>
+                        <div class="member-role">民政部长</div>
+                        <p class="member-desc">负责维护北金人民政府民众方面，更好的帮助人民</p>
+                    </div>
+
+                    <div class="team-member glass-card floating">
+                        <div class="member-avatar">
+                            <div class="minecraft-avatar">
+                                <i class="fas fa-clipboard-question"></i>
                             </div>
                         </div>
                         <h3 class="member-name">安思丞</h3>
-                        <div class="member-role">内阁（不属于官方人员）</div>
-                        <p class="member-desc">内阁内阁内阁内阁</p>
+                        <div class="member-role">总统助理</div>
+                        <p class="member-desc">负责帮助总统一些事情</p>
                     </div>
+
                 </div>
 
             </div>
         </section>
 
+        <section id="features" class="section features">
+            <div class="container">
+                <div class="section-title-bg">免责</div>
+                <p class="section-subtitle">北金国（以下简称 “本国”）及其人民政府为虚构创作主体，仅用于文学、影视、游戏、学术研究等非现实场景的设定呈现，不对应现实世界任何主权国家、地区、政治实体或行政机构，亦不涉及任何现实政治、经济、法律及社会事务。<br>为明确虚拟设定与现实的边界，特作如下免责声明：<br>虚拟属性声明：本国的领土、政体、法律体系、政策内容、机构设置及 “公民” 身份等均为虚构设定，与现实世界的地理疆域、国家主权、法律制度及公民权利无任何关联，不得作为理解现实国家治理、国际规则或法律权益的依据。<br>信息准确性免责：本国及政府相关的设定内容（包括但不限于历史背景、政策细则、数据统计等）可能因创作需求进行调整，不保证完全一致性、完整性或 “合理性”，仅服务于具体创作场景，不构成任何事实性陈述或承诺。<br>现实责任豁免：任何个人或主体基于本国虚拟设定所作出的现实决策，其产生的全部风险与后果均由行为人自行承担，本国 “政府” 不承担任何现实层面的法律责任、经济赔偿责任或道义责任。<br>现实权益无关联：本国 “法律”“政策” 不具备现实法律效力，“公民权利”“行政服务” 等虚拟权益无法对应或转化为现实中的公民权、财产权、行政救济权等合法权益，任何基于虚拟设定主张现实权益的行为均无法律依据。<br>知识产权与使用规范：本国及政府的设定内容受创作方知识产权保护，未经授权不得擅自用于商业盈利、恶意传播或歪曲解读；非商业用途的引用需注明 “虚拟设定” 属性，避免误导公众混淆虚拟与现实。<br>本声明自发布之日起生效，北金国（虚拟）人民政府对本声明内容拥有最终解释权。若因违反本声明或混淆虚拟与现实导致的任何纠纷，均由行为人自行承担全部责任。</p>
+                
+            </div>
 
+            <div class="block-border-1"></div>
+        </section>
 
         <!-- 添加：页面尾页（Footer） -->
         <style>
